--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.28.0
 numpy==2.2.3
-openai==1.64.0
+openai>=1.2.0
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
